# daq-tool

./: .gitignore  404.html  README.md  blog.html  daqcli.py  docusaurus.config.js  driver.py  index.html  markdown-page.html  package.json  sitemap.xml
.github/workflows/: deploy-to-pages.yml
app/: dashboard.py
app/assets/: 05_preloader.js  06_custom.css  custom.css
assets/js/: 0041c137.909a313e.js  01a85c17.660b1b28.js  0311e013.a20318e8.js  031793e1.a191e92d.js  096bfee4.5c5c63ba.js  0e384e19.66a6d903.js  0e384e19.755d6c1b.js  14b13b0e.b90ad7de.js  14eb3368.9f03d412.js  14eb3368.ad2864e6.js  1554790e.2856c662.js  1660e6b5.09df65b6.js  17896441.0abbad64.js  17896441.c371ba83.js  18c41134.d5408b40.js  18c41134.e1468ed3.js  1be78505.50ef99e9.js  1be78505.b973a9f9.js  1e4232ab.2e05d5dc.js  1e4232ab.5938e232.js  1f391b9e.212fdd96.js  1f391b9e.eff793ee.js  210.f607011a.js  2529.36e737bc.js  292f0e3e.afdd729e.js  30a24c52.b741b0c1.js  393be207.a2757e2f.js  393be207.b5f6ab28.js  393be207.bbb9e286.js  4972.6a90b3f7.js  4c9e35b1.bbf8b56f.js  533a09ca.043ad877.js  533a09ca.46e01c0d.js  59362658.5633085b.js  59362658.c825d4d6.js  5bd42df8.57a9dee6.js  (+65 more)
blog/: archive.html  atom.xml  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
config/: deps.toml
daq-tool_docs/: docusaurus.config.js  package-lock.json
docs/: daq-tool  intro.html
launcher/: Cargo.toml
launcher/src/: deflater.rs  downloader.rs  main.rs  unziper.rs
modules/: collect.py  concurrency.py  dashboard.py  database.py  formatmodule.py  remover.py  updater.py
(+19 files in other folders)
