[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
libdeflater = "0.11.0"
tar = "0.4.38"
flate2 = "1.0.25"
progress-streams = "1.1.0"
zip = "0.6.3"
